--- a/HeyaChat/package.json
+++ b/HeyaChat/package.json
@@ -18,6 +18,7 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-pager-view": "6.3.0",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.5",
