Created Login and Registering pages

--- a/HeyaChat/app.json
+++ b/HeyaChat/app.json
@@ -15,6 +15,7 @@
       "supportsTablet": false
     },
     "android": {
+      "softwareKeyboardLayoutMode": "pan",
       "adaptiveIcon": {
         "foregroundImage": "./assets/icons/adaptive-icon.png",
         "backgroundColor": "#ffffff"
