--- a/HeyaChat/package.json
+++ b/HeyaChat/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.28",
     "expo-linear-gradient": "~13.0.2",
+    "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "^0.74.5",
@@ -28,8 +29,8 @@
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
-    "react-native-vector-icons": "^10.1.0",
-    "expo-sqlite": "~14.0.6"
+    "react-native-ui-datepicker": "^2.0.3",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
