--- a/HeyaChat/app.json
+++ b/HeyaChat/app.json
@@ -39,6 +39,9 @@
     },
     "web": {
       "favicon": "./assets/icons/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-localization"
+    ]
   }
 }
