--- a/HeyaChat-Mobile/app.json
+++ b/HeyaChat-Mobile/app.json
@@ -12,7 +12,10 @@
       "backgroundColor": "darkgray"
     },
     "ios": {
-      "supportsTablet": false
+      "supportsTablet": false,
+      "config": {
+        "usesNonExemptEncryption": false
+      }
     },
     "android": {
       "softwareKeyboardLayoutMode": "pan",
@@ -21,17 +24,17 @@
         "backgroundColor": "#ffffff"
       },
       "permissions": [
-        "CAMERA",
-        "ACCESS_WIFI_STATE",
-        "CHANGE_WIFI_STATE",
-        "BLUETOOTH",
-        "BLUETOOTH_ADMIN",
-        "ACCESS_COARSE_LOCATION",
-        "ACCESS_FINE_LOCATION",
-        "BLUETOOTH_ADVERTISE",
-        "BLUETOOTH_CONNECT",
-        "BLUETOOTH_SCAN",
-        "NEARBY_WIFI_DEVICES"
+        "android.permission.CAMERA",
+        "android.permission.ACCESS_WIFI_STATE",
+        "android.permission.CHANGE_WIFI_STATE",
+        "android.permission.BLUETOOTH",
+        "android.permission.BLUETOOTH_ADMIN",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.BLUETOOTH_ADVERTISE",
+        "android.permission.BLUETOOTH_CONNECT",
+        "android.permission.BLUETOOTH_SCAN",
+        "android.permission.NEARBY_WIFI_DEVICES"
       ],
       "blockedPermissions": [
         ""
@@ -41,7 +44,19 @@
       "favicon": "./assets/icons/favicon.png"
     },
     "plugins": [
-      "expo-localization"
+      "expo-localization",
+      [
+        "expo-secure-store",
+        {
+          "faceIDPermission": "Allow Heya!Chat to access your Face ID biometric data."
+        }
+      ],
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow Heya!Chat to use your location."
+        }
+      ]
     ]
   }
 }
