--- a/HeyaChat-Mobile/package.json
+++ b/HeyaChat-Mobile/package.json
@@ -15,8 +15,13 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.28",
+    "expo": "~51.0.35",
+    "expo-device": "~6.0.2",
     "expo-linear-gradient": "~13.0.2",
+    "expo-localization": "~15.0.3",
+    "expo-location": "~17.0.1",
+    "expo-secure-store": "~13.0.2",
+    "expo-splash-screen": "~0.27.5",
     "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
@@ -29,11 +34,8 @@
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
-    "react-native-ui-datepicker": "^2.0.3",
-    "react-native-vector-icons": "^10.1.0",
-    "expo-localization": "~15.0.3",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "expo-splash-screen": "~0.27.5"
+    "react-native-uuid": "^2.0.2",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
